# chat-recall-api

./: .env.example  CLAUDE.md  Dockerfile  README.md  pyproject.toml
infra/: env.production.example
scripts/: deploy.sh  migrate.sh  setup-ecr.sh
src/chat_recall_api/: __init__.py  access.py  auth.py  config.py  content.py  deps.py  importer.py  main.py  ratelimit.py  retention.py
src/chat_recall_api/email/: sender.py
src/chat_recall_api/email/templates/: account_deleted.html  grace_period_warning.html  payment_failed.html  subscription_confirmed.html  trial_expiring.html  welcome.html
src/chat_recall_api/routers/: billing.py  stats.py  upload.py  users.py
src/chat_recall_api/schemas/: user.py
tests/: conftest.py  test_access.py  test_billing.py  test_health.py  test_isolation.py  test_ratelimit.py  test_retention.py  test_stats.py  test_upload.py  test_users.py
