[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chat-recall-api"
version = "0.1.0"
description = "REST API for Chat Recall — uploads, user management, billing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Eric Magnuson" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "psycopg[binary]>=3.1.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "stripe>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/chat_recall_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]
